[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/Dice.gd" type="Script" id=1]

[sub_resource type="QuadMesh" id=2]

[sub_resource type="BoxShape" id=1]
margin = 10.0
extents = Vector3( 1.8076, 1.5818, 1.67502 )

[node name="Spatial" type="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
mass = 2.0
gravity_scale = 2.0
script = ExtResource( 1 )

[node name="SideDown" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("../CollisionShape")

[node name="SideUp" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("../SideDown")

[node name="SideMiddle" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.5 )
mesh = SubResource( 2 )
skeleton = NodePath("../SideDown")

[node name="SideLeft" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.5, 0.5, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("../SideDown")

[node name="SideRight" type="MeshInstance" parent="."]
transform = Transform( 1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -0.5, 0.5, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("../SideDown")

[node name="SideMiddleDown" type="MeshInstance" parent="."]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0.5, -0.5 )
mesh = SubResource( 2 )
skeleton = NodePath("../SideDown")

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.5, 0 )
shape = SubResource( 1 )
